fix: header on mobile

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -6,6 +6,7 @@
 
   .description {
     margin-bottom: 20px;
+    width: 70%;
   }
 
   .buttons {
@@ -16,5 +17,10 @@
   }
 }
 
+@media screen and (min-width: 1000px) {
+  .description {
+    width: 70%;
+  }
+}
 
 
